...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_regular"
            android:text="Full Name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:textSize="25dp"
...
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:fontFamily="@font/amatic_regular"
            android:gravity="center"
            android:text="Create My Account"
            android:textColor="@color/primary_lighter"
            android:textSize="20dip"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lnkLogin"
            app:layout_constraintEnd_toEndOf="@+id/lnkLogin"
            app:layout_constraintStart_toStartOf="@+id/lnkLogin"
            app:layout_constraintTop_toBottomOf="@+id/userType"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:inputType="textPassword"
            android:textSize="25dp"
...
                android:fontFamily="@font/amatic_regular"
                android:text="Customer"
                android:textColor="@color/primary_lighter"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_regular"
                android:text="Merchant"
                android:textColor="@color/primary_lighter"
                android:textStyle="bold" />
...
