<resources>
    <string name="app_name">Bean and Leaf</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_Map">Map</string>
    <string name="title_History">History</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Recommendations">Recs</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="BeanandLeaf">Bean &amp; Leaf</string>
    <string name="title_Store">Store</string>
    <string name="title_Menu">Menu</string>
    <string name="delete_store">Delete Store</string>
    <string name="add_store">Add Store</string>
    <string name="add_new_store">Add New Store</string>
    <string name="update_item">Update Menu Item</string>
    <string name="delete_item">Delete Menu Item</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_caffeine_alert">CaffeineAlert</string>
    <string name="title_activity_caffeine">caffeine</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
    <string name="title_activity_log_orders">LogOrders</string>
    <string name="Merchant_Verification">Merchant Verification</string>
    <string name="Select_Store">Select Store</string>

    <item name="itemName" type="id" />
    <item name="itemSize1" type="id" />
    <item name="itemSize2" type="id" />
    <item name="itemSize3" type="id" />


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_click_menu">MapClickMenu</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_merchant_verification">MerchantVerification</string>


</resources>
