<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

    <TextView
        android:id="@+id/addStoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amatic_bold"
        android:text="Add Store"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/storename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/amatic"
        android:text="Store Name"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/storename_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/location_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/amatic"
        android:text="Latitude"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/location_lat_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/location_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="275dp"
        android:fontFamily="@font/amatic"
        android:text="Longitude"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/location_long_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/add_new_store"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="350dp"
            android:background="@drawable/green_round_button"
            android:enabled="true"
            android:fontFamily="@font/amatic_regular"
            android:text="@string/add_new_store"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

</RelativeLayout>
</ScrollView>