...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/link_signup"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginStart="60dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="60dp"
        android:background="@color/white"
        android:fontFamily="@font/amatic_regular"
        android:gravity="center"
        android:text="No account yet? Create one"
        android:textColor="@color/primary_lighter"
        android:textSize="19dip"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
...
