...
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_History" />

    <item
        android:id="@+id/navigation_recommendations"
        android:icon="@drawable/ic_recs_black_24dp"
        android:title="@string/title_Recommendations" />

</menu>

